--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,8 +1,11 @@
 Changelog
 =========
 
-1.4.2 - unreleased
-------------------
+1.5.0 - Initial copyleft version
+--------------------------------
+- Removed dependencies on clamav
+- removed tour
+- removed personal folders
 
 
 1.4.1 - 2011-12-12
