--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,11 @@
 Changelog
 =========
 
+
+1.5.1 - unreleased
+--------------------------------
+
+
 1.5.0 - Initial copyleft version
 --------------------------------
 - Removed dependencies on clamav
