--- a/src/intranett.policy/intranett/policy/locales/intranett.pot
+++ b/src/intranett.policy/intranett/policy/locales/intranett.pot
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: intranett\n"
-"POT-Creation-Date: 2012-12-03 21:26+0000\n"
+"POT-Creation-Date: 2012-12-03 21:34+0000\n"
 "PO-Revision-Date: 2010-12-22 10:00+0000\n"
 "Last-Translator: Jarn AS <info@jarn.com>\n"
 "Language-Team: Jarn AS <info@jarn.com>\n"
@@ -242,7 +242,7 @@ msgstr ""
 msgid "help_portrait"
 msgstr ""
 
-#. Default: "Hi, ${sender_fullname} has invited you to join the intranet site ${hostname}. ${mail_extra_text} Please accept this invitation by visiting: ${accept_invitation} (You must accept the invitation before ${expirationdate}) With kind regards, intranett.no-team"
+#. Default: "Hi, ${sender_fullname} has invited you to join the intranet site ${hostname}. ${extra_mail_text} Please accept this invitation by visiting: ${accept_invitation} (You must accept the invitation before ${expirationdate}) With kind regards, intranett.no-team"
 #: intranett.policy/intranett/policy/browser/templates/invitation-mail.pt:22
 msgid "invitation-mail-body"
 msgstr ""
